# cosy

./: .gitlab-ci.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  dockerfile  pylintrc  pyproject.toml  setup.cfg  setup.py
cosy/: __init__.py  cli.py  cli_skel.py  cli_sysdeps.py  install.py  packages.yml  project.py
cosy/skel/: gitignore
cpa/: __init__.py  cli.py  cli_sysdeps.py  install.py  project.py  pylintrc
tests/: test_cpa.py  test_project.py  test_skel.py
tests/testproject_poetry/: pyproject.toml
